--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,15 +1,11 @@
-html, body {
+html,
+body {
     height: 100%;
+    font-family: "Lato", sans-serif;
 }
 
 .wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-}
-
-.container {
-    max-width: 1200px;
+    max-width: 1140px;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0 25px;
 }
